--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Node.js / VS Code Extension
+out/
+node_modules/
+.vscode-test/
+*.vsix
+.DS_Store
+.llm-guardrail/
